[gd_scene load_steps=3 format=3 uid="uid://b3x6j2lcn1nna"]

[ext_resource type="Script" uid="uid://oglta4m5q1ad" path="res://Scripts/interacting_component.gd" id="1_8kio4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3rmx8"]
radius = 16.0

[node name="InteractingComponent" type="Node2D"]
script = ExtResource("1_8kio4")

[node name="InteractLabel" type="Label" parent="."]
visible = false
z_index = 10
offset_left = -54.0
offset_top = -95.0
offset_right = 57.0
offset_bottom = -72.0
text = "E pra interagir"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractingRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractingRange"]
shape = SubResource("CircleShape2D_3rmx8")

[connection signal="area_entered" from="InteractingRange" to="." method="_on_interacting_range_area_entered"]
[connection signal="area_exited" from="InteractingRange" to="." method="_on_interacting_range_area_exited"]
